1999-07-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.[hm] (swarm_directory_get_swarm_class): Always
	define (revert to getClass when no JDK), move objc/objc.h
	before declarations.

1999-07-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m ([FCall_c -getRetVal:buf:]): Use SD_SWITCHOBJC instead
	of JUPDATE.  Use SD_FINDOBJC instead of JFINDOBJC.

	* DefObject.m ([Object_s -forward::]): Accomodate J* to SD_* renames.

	* directory.[hm] (DirectoryEntry, Directory): New classes.
	Directory lookups on Java side are done using hashCode method
	to index into table of Maps.
	(jobject_id): Remove; use directory instances as avl entry.
	Rename all java_directory_* routines to swarm_directory_*. 
	Change all macros to use new Directoy methods. Accomodate J* to
	SD_* renames.
	Use find/add instead of ensure whenever possible.  Remove
	distinction between `update' and `switch' -- stick with switch
	predicated on valid reverse lookup.

1999-07-27  Vladimir Jojic  <vjojic@ute.santafe.edu>

	* directory.m: New global variables c_PhaseCImpl, 
	m_PhaseCImpl_copy_creating_phase_to_using_phase and
	f_nextPhase used in java_next_phase.
	(java_next_phase): Use global variables to invoke 
	copy_creating_phase_to_using_phase and get value of field
	nextPhase.

1999-07-27  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m (java_get_swarm_class): Rename 
	java_get_class_from_objc_object to java_get_swarm_class.
	(objc_class_for_classname): New function.
	(java_ensure_class): Use objc_class_for_classname instead of
	objc_lookup_class.

1999-07-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* HDF5Object.m ([HDF -packObj:to:]): Improve type mismatch
	error message.

1999-07-21  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* directory.m: Add new global variables for different Control 
	States.
	(java_directory_objc_find): Add two additional cases for different
	Objective-C classes.
	(java_directory_update): Erase data entry after serach in java tree