@@ -1,3 +1,13 @@
+1999-07-30  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* directory.m ([Directory -nextPhase:currentJavaPhase:]): 
+	New method.
+	([Directory -objcFindJavaClass:]): New method.
+	([Directory -objcEnsureJava:]): Use it.
+
+	* directory.[hm]: Rename Directory methods to make it more
+	clear the semantics from their names.
+
 1999-07-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* directory.[hm] (swarm_directory_get_swarm_class): Always
